# fair-bonus-allocator

./: .gitignore  README.md  README.zh-CN.md  allocator.py  app.py  cli.py  config.py  dashboard.py  deep_stress_test.py  example_config.yaml  excel_io.py  pyproject.toml  sensitivity.py  smoke_test.py  smoke_v2.py  stress_50k.py  stress_test.py  tiers.py  v2_allocator.py
tests/: test_excel_io.py  test_v2_validation.py  test_validation.py
